--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ jupiter = "5.11.0"
 navigationFragmentKtx = "2.7.7"
 preferenceKtx = "1.2.1"
 vectordrawable = "1.2.0"
+activity = "1.8.0"
 
 [libraries]
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
@@ -29,6 +30,7 @@ matrixlib = { module = "io.github.pdvrieze.matrixlib:matrixlib", version.ref = "
 jupiter-api = { module="org.junit.jupiter:junit-jupiter-api", version.ref="jupiter" }
 jupiter-engine = { module="org.junit.jupiter:junit-jupiter-engine", version.ref="jupiter" }
 jupiter-parameters = { module="org.junit.jupiter:junit-jupiter-params", version.ref="jupiter" }
+androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
