--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="WindowManagerPreference:FreeformWindowSize"
@@ -23,6 +29,8 @@
         <meta-data
             android:name="WindowManagerPreference:FreeformWindowOrientation"
             android:value="portrait" />
+
     </application>
+
 
 </manifest>
